--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="wrapper">
         <!-- untuk home -->
         <section id="home">
-            <img src="https://rezaantonius.files.wordpress.com/2013/08/kumpulan-puisi-anak-sekolah-dasar-sd-terbaru.jpg"/>
+            <img src="Image.png"/>
             <div class="kolom">
                 <p class="deskripsi">Semangat Sekolah dengan Seragam Sekolah</p>
                 <h2>Senyum Indah dengan Seragam Berkualitas Tinggi </h2>
