--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
         </section>
 
-        <!-- untuk courses -->
+        <!-- untuk profil -->
         <section id="profile">
             <div class="kolom">
                 <p class="deskripsi">You Will Need This</p>
@@ -46,7 +46,7 @@
             <img src="https://fitinline.com/data/article/20201224/Warna-Seragam-Sekolah.jpg"/>
         </section>
 
-        <!-- untuk tutors -->
+        <!-- untuk produk -->
         <section id="produk">
             <div class="tengah">
                 <div class="kolom">
@@ -76,7 +76,7 @@
             </div>
         </section>
 
-        <!-- untuk partners -->
+        <!-- untuk pesanan -->
         <section id="pesanan">
             <div class="tengah">
                 <div class="kolom">
